--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "setupTestFrameworkScriptFile": "<rootDir>/test/test-utils/matchers.ts",
     "testMatch": [
       "**/test/**/*.(js|ts)",
-      "**/test/*.(js|ts)"
+      "**/test/*.(js|ts)",
+      "**/__tests__/**/*.(js|ts)"
     ],
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/",
